fix:Correccion Bugs  Despliegue 3